--- a/css/estilo.css
+++ b/css/estilo.css
@@ -10416,9 +10416,9 @@ main {
 }
 
 .img-galeria {
-  height: 250px;
-  width: 250px;
-  margin-bottom: 1rem;
+  height: 300px;
+  width: 300px;
+  margin-bottom: 5rem;
 }
 
 .logo-footer {
@@ -10429,6 +10429,7 @@ main {
 .title {
   color: #ffd4e1;
   font-size: 2.5rem;
+  padding-bottom: 1rem;
 }
 
 .autor a {
@@ -10440,9 +10441,13 @@ main {
   text-decoration: underline;
 }
 
-span {
+.social {
   text-decoration: none;
-  color: #ffd4e1;
+  color: darkgrey;
+}
+
+.social:hover {
+  color: black;
 }
 
 /*# sourceMappingURL=estilo.css.map */
