--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,8 @@ $theme-colors: (
   "primary": #d2effd,
   //   "danger": $danger
 );
+$letter-color: black;
+$title-color:rgb(255, 212, 225);
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 * {
@@ -22,7 +24,7 @@ main {
 }
 
 .title {
-  color: rgb(255, 212, 225);
+  color: $title-color;
   font-size: 2.5rem;
   padding-bottom: 1rem;
 }
@@ -30,7 +32,7 @@ main {
 .autor {
   a {
     text-decoration: none;
-    color: black;
+    color: $letter-color;
     font-weight: bold;
   }
   a:hover {
@@ -42,5 +44,5 @@ main {
   color: darkgrey;
 }
 .social:hover{
-  color: black;
+  color: $letter-color;
 }
